--- a/my_website/index.html
+++ b/my_website/index.html
@@ -5,9 +5,10 @@
     <title>Home</title>
   </head>
   <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <h1>This is my test Home Page!</h1>
-    <img src="images/home.jpg" height="250">
-  </body>
+  <a href="index.html">Home</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="about.html">About</a>
+  <h1> Valerie's Home Page!</h1>
+  <img src="images/flower.jpg" height="250">
 </html>
+Enjoy:)
