changed the heading

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -11,8 +11,9 @@
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
-    </a>
+    My Scratch Project
+    <a target="_blank" href="https://scratch.mit.edu/projects/326755930/">
+      <img src="images/alienAttack.PNG" height="100">
+    </a> 
 	  </body>
 	</html>
